--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
+    "@tanstack/react-query": "^5.17.19",
+    "axios": "^1.6.5",
     "firebase": "^10.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -18,6 +20,7 @@
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.21.3",
     "react-toastify": "^10.0.4",
+    "recharts": "^2.10.4",
     "sweetalert2": "^11.6.13"
   },
   "devDependencies": {
